# ai-ml-thrasio-mvp

./: .env.example  .gitignore  CLAUDE.md  README.md  cursorrules  pipeline.json  pyproject.toml
.cursor/rules/: thrasio.mdc
.github/workflows/: ci-cd-pipeline.yml  deploy-reporting.yml  ruff.yml
app/: __init__.py  automl_train.py  automl_train_backup.py  cloud_function.py  deploy.py  main.py  pipeline.py  reporting_pipeline.json  reporting_pipeline.py  requirements.txt  sample_data.py  weekly_reporting.py
data/: amazon_search_daily.csv  amazon_search_data.csv
docs/: WEEKLY_REPORTING.md
infrastructure/: bucket_lifecycle.json  cloud_scheduler.yaml  deploy_reporting.sh
tests/: __init__.py  test_pipeline.py  test_reporting.py
